--- a/vibes-express/package.json
+++ b/vibes-express/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^6.6.1",
+    "mongoose": "^8.3.5",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   }
 }
